bootstrap/apps/nfs-pvc-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-test-pod
spec:
  containers:
    - name: writer
      image: busybox
      command: [ "sh", "-c", "while true; do echo $(date) >> /mnt/data/test.log; sleep 5; done" ]
      volumeMounts:
        - name: test-volume
          mountPath: /mnt/data
  volumes:
    - name: test-volume
      persistentVolumeClaim:
        claimName: nfs-test-pvc
