bootstrap/apps/nfs-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-test-pod
spec:
  containers:
    - name: writer
      image: busybox
      command: ["sh", "-c", "while true; do echo $(date) >> /mnt/test.log; sleep 5; done"]
      volumeMounts:
        - name: test-vol
          mountPath: /mnt
  volumes:
    - name: test-vol
      persistentVolumeClaim:
        claimName: nfs-test-pvc
